--- a/config.toml
+++ b/config.toml
@@ -1,60 +1,24 @@
-# baseURL = "https://your_domain.com/"
-languageCode = "en"
-defaultContentLanguage = "en"
-
+theme = "lynx"
 title = "Lynx"
-# copyright = "Copy, _right?_ :thinking_face:"
 
 enableEmoji = true
 disableKinds = ["taxonomy", "term"]
 
 [author]
-  # name = "Your name here"
-  # headline = "An awesome person"
-  # image = "img/author.jpg"  # path relative to static directory
-
+  name = "Lynx"
+  headline = "A simple links theme for Hugo built with Tailwind CSS"
+  image = "author.jpg"
   links = [
-    # { email = "mailto:hello@your_domain.com" },
-    # { link = "https://link-to-some-website.com/" },
-    # { amazon = "https://www.amazon.com/hz/wishlist/ls/wishlist-id" },
-    # { apple = "https://www.apple.com" },
-    # { codepen = "https://codepen.io/username" },
-    # { dev = "https://dev.to/username" },
-    # { discord = "https://discord.gg/invitecode" },
-    # { dribbble = "https://dribbble.com/username" },
-    # { facebook = "https://facebook.com/username" },
-    # { flickr = "https://www.flickr.com/photos/username/" },
-    # { foursquare = "https://foursquare.com/username" },
-    # { github = "https://github.com/username" },
-    # { gitlab = "https://gitlab.com/username" },
-    # { google = "https://www.google.com/" },
-    # { instagram = "https://instagram.com/username" },
-    # { keybase = "https://keybase.io/username" },
-    # { kickstarter = "https://www.kickstarter.com/profile/username" },
-    # { lastfm = "https://lastfm.com/user/username" },
-    # { linkedin = "https://linkedin.com/in/username" },
-    # { mastodon = "https://mastodon.instance/@username" },
-    # { medium = "https://medium.com/username" },
-    # { microsoft = "https://www.microsoft.com/" },
-    # { patreon = "https://www.patreon.com/username" },
-    # { pinterest = "https://pinterest.com/username" },
-    # { reddit = "https://reddit.com/user/username" },
-    # { slack = "https://workspace.url/team/userid" },
-    # { snapchat = "https://snapchat.com/add/username" },
-    # { soundcloud = "https://soundcloud.com/username" },
-    # { stack-exchange = "https://stackexchange.com/users/userid/username" },
-    # { stack-overflow = "https://stackoverflow.com/users/userid/username" },
-    # { steam = "https://steamcommunity.com/profiles/userid" },
-    # { telegram = "https://t.me/username" },
-    # { tiktok = "https://tiktok.com/@username" },
-    # { tumblr = "https://username.tumblr.com" },
-    # { twitch = "https://twitch.tv/username" },
-    # { twitter = "https://twitter.com/username" },
-    # { whatsapp = "https://wa.me/phone-number" },
-    # { youtube = "https://youtube.com/username" },
+    { link = { href = "https://github.com/jpanther/lynx/blob/stable/README.md", text = "View the readme", icon = "github" } },
+    { link = { href = "styles/", text = "All the link styles", target = "_self" } },
+    { github = "https://github.com/jpanther/lynx" },
+    { twitter = "https://twitter.com/jpanther" },
+    { font-awesome = { href = "https://fontawesome.com/", text = "FontAwesome" } },
   ]
 
-[module]
-  [module.hugoVersion]
-    extended = false
-    min = "0.86.1"
+[markup.highlight]
+  noClasses = false
+
+[markup.goldmark]
+[markup.goldmark.renderer]
+  unsafe = true
